--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-19 13:01+0800\n"
+"POT-Creation-Date: 2023-02-17 23:01+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -426,11 +426,8 @@ msgstr ""
 msgid "V"
 msgstr "V"
 
-msgid "Internal Version"
+msgid "SoftFever Version"
 msgstr ""
-
-msgid "Version"
-msgstr "Verzió"
 
 msgid ""
 "BambuStudio will terminate because of running out of memory.It may be a bug. "
@@ -518,8 +515,8 @@ msgstr "Válassz ki egy fájlt (3mf):"
 msgid "Choose one or more files (3mf/step/stl/svg/obj/amf):"
 msgstr ""
 
-msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
-msgstr "Válassz ki egy fájlt (gcode/.gco/.g/.ngc/ngc):"
+msgid "Choose one file (gcode/3mf):"
+msgstr ""
 
 msgid "Some presets are modified."
 msgstr "Néhány beállítás megváltozott."
@@ -1509,6 +1506,9 @@ msgstr ""
 "őket egyenként felsorolni, ezért a megfelelő helyeken a kód kommentekben "
 "vannak feltüntetve."
 
+msgid "Version"
+msgstr "Verzió"
+
 msgid "AMS Materials Setting"
 msgstr ""
 
@@ -1767,6 +1767,9 @@ msgstr ""
 msgid "File"
 msgstr "Fájl"
 
+msgid "Calibration"
+msgstr "Kalibrálás"
+
 msgid ""
 "Failed to download the plug-in. Please check your firewall settings and vpn "
 "software, check and retry."
@@ -1978,13 +1981,6 @@ msgstr ""
 "Visszaállítva 0,2-re"
 
 msgid ""
-"Too large layer height.\n"
-"Reset to 0.2"
-msgstr ""
-"Túl nagy rétegmagasság.\n"
-"Visszaállítva 0,2-re"
-
-msgid ""
 "Too small ironing spacing.\n"
 "Reset to 0.1"
 msgstr ""
@@ -2043,14 +2039,12 @@ msgstr ""
 "spirál mód használatát\n"
 "Nem - Ne használja a spirál módot ez alkalommal"
 
-msgid ""
-"Arachne engine only works when overhang slowing down is disabled.\n"
-"This may cause decline in the quality of overhang surface when print fastly"
+msgid "Arachne engine doesn't work with classic overhang speed mode.\n"
 msgstr ""
 
 msgid ""
-"Disable overhang slowing down automatically? \n"
-"Yes - Enable arachne and disable overhang slowing down\n"
+"Turn off classic mode automatically? \n"
+"Yes - Enable arachne with classic mode off\n"
 "No  - Give up using arachne this time"
 msgstr ""
 
@@ -2260,6 +2254,12 @@ msgstr "Anyagáramlás"
 msgid "Tool"
 msgstr "Szerszám"
 
+msgid "Layer Time"
+msgstr ""
+
+msgid "Layer Time (log)"
+msgstr ""
+
 msgid "Height: "
 msgstr ""
 
@@ -2270,6 +2270,9 @@ msgid "Speed: "
 msgstr ""
 
 msgid "Flow: "
+msgstr ""
+
+msgid "Layer Time: "
 msgstr ""
 
 msgid "Fan Speed: "
@@ -2569,9 +2572,6 @@ msgstr ""
 "határt.\n"
 "Kérjük, orvosold a problémát azzal, hogy teljesen a lemezre helyezed és "
 "győződj meg, hogy a magassága belefér a nyomtatótérbe."
-
-msgid "Calibration"
-msgstr "Kalibrálás"
 
 msgid "Calibration step selection"
 msgstr ""
@@ -2927,6 +2927,45 @@ msgstr "Nézet"
 
 msgid "Help"
 msgstr "Segítség"
+
+msgid "Temperature Calibration"
+msgstr ""
+
+msgid "Pass 1"
+msgstr ""
+
+msgid "Flow rate test - Pass 1"
+msgstr ""
+
+msgid "Pass 2"
+msgstr ""
+
+msgid "Flow rate test - Pass 2"
+msgstr ""
+
+msgid "Flow rate"
+msgstr ""
+
+msgid "Pressure advance"
+msgstr ""
+
+msgid "Max flowrate"
+msgstr ""
+
+msgid "VFA"
+msgstr ""
+
+msgid "More..."
+msgstr ""
+
+msgid "Tutorial"
+msgstr ""
+
+msgid "Calibration help"
+msgstr ""
+
+msgid "More calibrations"
+msgstr ""
 
 msgid "3D Models"
 msgstr ""
@@ -4652,6 +4691,9 @@ msgstr "Mozgás sebessége"
 msgid "Acceleration"
 msgstr "Gyorsulás"
 
+msgid "Jerk(XY)"
+msgstr ""
+
 msgid "Raft"
 msgstr ""
 
@@ -4666,6 +4708,9 @@ msgstr "Speciális mód"
 
 msgid "G-code output"
 msgstr "G-kód kimenet"
+
+msgid "Post-processing Scripts"
+msgstr ""
 
 msgid "Frequent"
 msgstr "Gyakori"
@@ -4713,6 +4758,9 @@ msgstr "Ajánlott hőmérséklet-tartomány"
 
 msgid "Print temperature"
 msgstr "Nyomtatási hőmérséklet"
+
+msgid "Chamber temperature"
+msgstr ""
 
 msgid "Nozzle"
 msgstr "Fúvóka"
@@ -4852,6 +4900,15 @@ msgstr "Rétegmagasság limitek"
 
 msgid "Retraction when switching material"
 msgstr "Visszahúzás anyagváltáskor"
+
+msgid ""
+"The Wipe option is not available when using the Firmware Retraction mode.\n"
+"\n"
+"Shall I disable it in order to enable Firmware Retraction?"
+msgstr ""
+
+msgid "Firmware Retraction"
+msgstr ""
 
 msgid "Detached"
 msgstr "Különálló"
@@ -6099,6 +6156,12 @@ msgid ""
 "external bridges. Use 180°for zero angle."
 msgstr ""
 
+msgid "Bridge density"
+msgstr ""
+
+msgid "Density of external bridges. 100% means solid bridge. Default is 100%."
+msgstr ""
+
 msgid "Bridge flow"
 msgstr "Áthidalás áramlási sebessége"
 
@@ -6109,6 +6172,28 @@ msgstr ""
 "Csökkentsd kicsit ezt az értéket (például 0,9-re), hogy ezzel csökkentsd az "
 "áthidaláshoz használt anyag mennyiségét, és a megereszkedést"
 
+msgid "Top surface flow ratio"
+msgstr ""
+
+msgid ""
+"This factor affects the amount of material for top solid infill. You can "
+"decrease it slightly to have smooth surface finish"
+msgstr ""
+
+msgid "Bottom surface flow ratio"
+msgstr ""
+
+msgid "This factor affects the amount of material for bottom solid infill"
+msgstr ""
+
+msgid "Precise wall(experimental)"
+msgstr ""
+
+msgid ""
+"Improve shell precesion by adjusting outer wall spacing. This also improves "
+"layer consistency."
+msgstr ""
+
 msgid "Only one wall on top surfaces"
 msgstr "Csak egy fal a felső felületeken"
 
@@ -6118,6 +6203,20 @@ msgid ""
 msgstr ""
 "Csak egy falat használ a sík felső felületeken, hogy több hely maradjon a "
 "felső kitöltési mintának"
+
+msgid "Only one wall on first layer"
+msgstr ""
+
+msgid ""
+"Use only one wall on first layer, to give more space to the bottom infill "
+"pattern"
+msgstr ""
+
+msgid "Classic mode"
+msgstr ""
+
+msgid "Enable this option to use classic mode"
+msgstr ""
 
 msgid "Slow down for overhang"
 msgstr "Lassítás túlnyúlásoknál"
@@ -6150,6 +6249,15 @@ msgstr ""
 "Ez szabályozza a perem típusát a modellek külső oldalán, a furatok belső "
 "oldalán, vagy mindkét helyen. Az Auto beállítás azt jelenti, hogy mind a "
 "perem pozícióját, mind a perem szélességét a szeletelő szabályozza."
+
+msgid "outer_only"
+msgstr ""
+
+msgid "Inner brim only"
+msgstr ""
+
+msgid "Outer and inner brim"
+msgstr ""
 
 msgid "Brim-object gap"
 msgstr "Perem-tárgy közötti rés"
@@ -6351,6 +6459,26 @@ msgstr ""
 "A legkülső látható fal sebessége. A jobb minőség érdekében ez lassabb, mint "
 "a belső fal sebessége."
 
+msgid "Small perimeters"
+msgstr ""
+
+msgid ""
+"This separate setting will affect the speed of perimeters having radius <= "
+"small_perimeter_threshold (usually holes). If expressed as percentage (for "
+"example: 80%) it will be calculated on the outer wall speed setting above. "
+"Set to zero for auto."
+msgstr ""
+
+msgid "mm/s or %"
+msgstr ""
+
+msgid "Small perimeters threshold"
+msgstr ""
+
+msgid ""
+"This sets the threshold for small perimeter length. Default threshold is 0mm"
+msgstr ""
+
 msgid "Order of inner wall/outer wall/infil"
 msgstr "Belső/külső fal és kitöltés sorrendje"
 
@@ -6368,6 +6496,9 @@ msgstr "kitöltés/belső/külső"
 
 msgid "infill/outer/inner"
 msgstr "kitöltés/külső/belső"
+
+msgid "inner-outer-inner/infill"
+msgstr ""
 
 msgid "Height to rod"
 msgstr "Magasság a rúdig"
@@ -6422,6 +6553,17 @@ msgstr ""
 "kódban. Az ajánlott értéktartomány 0,95 és 1,05 között van. Ennek az "
 "értéknek a változtatásával szép sík felületet kaphatsz, ha úgy tapasztalod, "
 "hogy túl sok vagy kevés az anyagáramlás."
+
+msgid "Enable pressure advance"
+msgstr ""
+
+msgid ""
+"Enable pressure advance, auto calibration result will be overwriten once "
+"enabled."
+msgstr ""
+
+msgid "Pressure advance(Klipper) AKA Linear advance factor(Marlin)"
+msgstr ""
 
 msgid "Default line width if some line width is set to be zero"
 msgstr ""
@@ -6483,6 +6625,14 @@ msgstr "mm³/s"
 
 msgid "Minimal purge on wipe tower"
 msgstr "Minimális tisztítás a törlőtoronyban"
+
+msgid ""
+"After a tool change, the exact position of the newly loaded filament inside "
+"the nozzle may not be known, and the filament pressure is likely not yet "
+"stable. Before purging the print head into an infill or a sacrificial "
+"object, Slic3r will always prime this amount of material into the wipe tower "
+"to produce successive infill or sacrificial object extrusions reliably."
+msgstr ""
 
 msgid "Filament load time"
 msgstr "Filament betöltési idő"
@@ -6572,6 +6722,14 @@ msgstr ""
 "A ritkás kitöltési minta szöge, amely a vonal kezdő- vagy fő irányát "
 "szabályozza"
 
+msgid "Bridge infill direction"
+msgstr ""
+
+msgid ""
+"Angle for bridge infill pattern, which controls the start or main direction "
+"of line"
+msgstr ""
+
 msgid "Sparse infill density"
 msgstr "Kitöltés sűrűsége"
 
@@ -6617,6 +6775,15 @@ msgstr ""
 msgid "Lightning"
 msgstr ""
 
+msgid "Acceleration of outer walls"
+msgstr ""
+
+msgid "Acceleration of inner walls"
+msgstr ""
+
+msgid "Acceleration of travel moves"
+msgstr ""
+
 msgid ""
 "Acceleration of top surface infill. Using a lower value may improve top "
 "surface quality"
@@ -6633,6 +6800,37 @@ msgid ""
 msgstr ""
 "A kezdőréteg gyorsulása. Alacsonyabb érték használata javíthatja a "
 "tárgyasztalhoz való tapadást"
+
+msgid "Enable accel_to_decel"
+msgstr ""
+
+msgid "Klipper's max_accel_to_decel will be adjusted automatically"
+msgstr ""
+
+msgid "accel_to_decel"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Klipper's max_accel_to_decel will be adjusted to this % of acceleration"
+msgstr ""
+
+msgid "Jerk of outer walls"
+msgstr ""
+
+msgid "Jerk of inner walls"
+msgstr ""
+
+msgid "Jerk for top surface"
+msgstr ""
+
+msgid "Jerk for infill"
+msgstr ""
+
+msgid "Jerk for initial layer"
+msgstr ""
+
+msgid "Jerk for travel"
+msgstr ""
 
 msgid "Line width of initial layer"
 msgstr "Az első réteg vonalszélessége"
@@ -6696,6 +6894,17 @@ msgid ""
 "segment"
 msgstr ""
 "Az egyes vonalszakaszokon használt véletlen pontok közötti átlagos távolság"
+
+msgid "Filter out tiny gaps"
+msgstr ""
+
+msgid "Layers and Perimeters"
+msgstr ""
+
+msgid ""
+"Filter out gaps smaller than the threshold specified. This setting won't "
+"affact top/bottom layers"
+msgstr ""
 
 msgid ""
 "Speed of gap infill. Gap usually has irregular line width and should be "
@@ -6776,6 +6985,9 @@ msgstr "G-kód változat"
 msgid "What kind of gcode the printer is compatible with"
 msgstr "Milyen G-kóddal kompatibilis a nyomtató."
 
+msgid "Klipper"
+msgstr ""
+
 msgid "Infill combination"
 msgstr "Kitöltés összevonása"
 
@@ -6806,6 +7018,15 @@ msgstr ""
 
 msgid "Speed of internal sparse infill"
 msgstr "A belső ritkás kitöltés sebessége"
+
+msgid "Interface shells"
+msgstr ""
+
+msgid ""
+"Force the generation of solid shells between adjacent materials/volumes. "
+"Useful for multi-extruder prints with translucent materials or manual "
+"soluble support material"
+msgstr ""
 
 msgid "Ironing Type"
 msgstr "Vasalás típusa"
@@ -7093,6 +7314,14 @@ msgstr "A belső fal nyomtatási sebessége"
 msgid "Number of walls of every layer"
 msgstr "Ez a falak száma rétegenként."
 
+msgid ""
+"If you want to process the output G-code through custom scripts, just list "
+"their absolute paths here. Separate multiple scripts with a semicolon. "
+"Scripts will be passed the absolute path to the G-code file as the first "
+"argument, and they can access the Slic3r config settings by reading "
+"environment variables."
+msgstr ""
+
 msgid "Raft contact Z distance"
 msgstr "Tutaj érintkezés Z távolság"
 
@@ -7190,6 +7419,19 @@ msgstr ""
 "nagyobb mozgás közben a tárgynak ütközzön. A Z tengely emelésekor használt "
 "körkörös mozgás megelőzheti a szálazást."
 
+msgid "Extra length on restart"
+msgstr ""
+
+msgid ""
+"When the retraction is compensated after the travel move, the extruder will "
+"push this additional amount of filament. This setting is rarely needed."
+msgstr ""
+
+msgid ""
+"When the retraction is compensated after changing tool, the extruder will "
+"push this additional amount of filament."
+msgstr ""
+
 msgid "Retraction Speed"
 msgstr "Visszahúzás sebessége"
 
@@ -7205,6 +7447,14 @@ msgid ""
 msgstr ""
 "A filament extruderbe történő visszatöltésének sebessége. A nulla azonos "
 "sebességet jelent a visszahúzással"
+
+msgid "Use firmware retraction"
+msgstr ""
+
+msgid ""
+"This experimental setting uses G10 and G11 commands to have the firmware "
+"handle the retraction. This is only supported in recent Marlin."
+msgstr ""
 
 msgid "Seam position"
 msgstr "Varrat pozíció"
@@ -7222,6 +7472,43 @@ msgid "Back"
 msgstr "Hátul"
 
 msgid "Random"
+msgstr ""
+
+msgid "Seam gap"
+msgstr ""
+
+msgid ""
+"In order to reduce the visibility of the seam in a closed loop extrusion, "
+"the loop is interrupted and shortened by a specified amount.\n"
+"his amount can be specified in millimeters or as a percentage of the current "
+"extruder diameter. The default value for this parameter is 15%."
+msgstr ""
+
+msgid "Role base wipe speed"
+msgstr ""
+
+msgid ""
+"The wipe speed is determined by the speed of the current extrusion role.e.g. "
+"if a wipe action is executed immediately following an outer wall extrusion, "
+"the speed of the outer wall extrusion will be utilized for the wipe action."
+msgstr ""
+
+msgid "Wipe on loops"
+msgstr ""
+
+msgid ""
+"To minimize the visibility of the seam in a closed loop extrusion, a small "
+"inward movement is executed before the extruder leaves the loop."
+msgstr ""
+
+msgid "Wipe speed"
+msgstr ""
+
+msgid ""
+"The wipe speed is determined by the speed setting specified in this "
+"configuration.If the value is expressed as a percentage (e.g. 80%), it will "
+"be calculated based on the travel speed setting above.The default value for "
+"this parameter is 80%"
 msgstr ""
 
 msgid "Skirt distance"
@@ -7565,6 +7852,19 @@ msgstr "Fa támasz falak száma"
 msgid "This setting specify the count of walls around tree support"
 msgstr "Ez a beállítás határozza meg a falak számát a fa támasz körül."
 
+msgid "Tree support with infill"
+msgstr "Fa támasz kitöltéssel"
+
+msgid ""
+"This setting specifies whether to add infill inside large hollows of tree "
+"support"
+msgstr ""
+"Ez a beállítás határozza meg, hogy a fa támasz nagyobb üregeiben legyen-e "
+"kitöltés."
+
+msgid "Target chamber temperature"
+msgstr ""
+
 msgid "Nozzle temperature for layers after the initial one"
 msgstr "Fúvóka hőmérséklete az első réteg után"
 
@@ -7645,6 +7945,15 @@ msgstr ""
 "hogy a fúvókából szivárgott anyagot eltávolítsa. Ez minimálisra csökkentheti "
 "a pöttyöket, amikor a nyomtatófej a mozgást követően egy egy új alkatrész "
 "nyomtatásába kezd."
+
+msgid "Z hop type"
+msgstr ""
+
+msgid "NormalLift"
+msgstr ""
+
+msgid "SpiralLift"
+msgstr ""
 
 msgid "Wipe Distance"
 msgstr "Törlési távolság"
@@ -7730,6 +8039,24 @@ msgstr ""
 "zsugorodik. Pozitív érték esetén a kontúr nagyobb lesz, negatív érték esetén "
 "kisebb. Ez a funkció a méret kismértékű módosítására szolgál, ha a "
 "kinyomtatott tárggyal összeszerelési problémák akadnak"
+
+msgid "G-code thumbnails"
+msgstr ""
+
+msgid ""
+"Picture sizes to be stored into a .gcode and .sl1 / .sl1s files, in the "
+"following format: \"XxY, XxY, ...\""
+msgstr ""
+
+msgid "Use relative E distances"
+msgstr ""
+
+msgid ""
+"Relative extrusion is recommended when using \"label_objects\" option.Some "
+"extruders work better with this option unckecked (absolute extrusion mode). "
+"Wipe tower is only compatible with relative mode. It is always enabled on "
+"BambuLab printers. Default is checked"
+msgstr ""
 
 msgid ""
 "Classic wall generator produces walls with constant extrusion width and for "
@@ -7983,6 +8310,119 @@ msgstr "Támasz: lyukak javítása %d. réteg"
 msgid "Support: propagate branches at layer %d"
 msgstr "Támasz: ágak kiterjesztése %d. réteg"
 
+msgid "PA Calibration"
+msgstr ""
+
+msgid "DDE"
+msgstr ""
+
+msgid "Bowden"
+msgstr ""
+
+msgid "Extruder type"
+msgstr ""
+
+msgid "PA Tower"
+msgstr ""
+
+msgid "PA Line"
+msgstr ""
+
+msgid "Method"
+msgstr ""
+
+msgid "Start PA: "
+msgstr ""
+
+msgid "End PA: "
+msgstr ""
+
+msgid "PA step: "
+msgstr ""
+
+msgid "Print numbers"
+msgstr ""
+
+msgid ""
+"Please input valid values:\n"
+"Start PA: >= 0.0\n"
+"End PA: > Start PA\n"
+"PA step: >= 0.001)"
+msgstr ""
+
+msgid "Temperature calibration"
+msgstr ""
+
+msgid "PLA"
+msgstr ""
+
+msgid "ABS/ASA"
+msgstr ""
+
+msgid "PETG"
+msgstr ""
+
+msgid "TPU"
+msgstr ""
+
+msgid "PA-CF"
+msgstr ""
+
+msgid "PET-CF"
+msgstr ""
+
+msgid "Filament type"
+msgstr ""
+
+msgid "Start temp: "
+msgstr ""
+
+msgid "End end: "
+msgstr ""
+
+msgid "Temp step: "
+msgstr ""
+
+msgid ""
+"Please input valid values:\n"
+"Start temp: <= 350\n"
+"End temp: >= 180\n"
+"Start temp > End temp + 5)"
+msgstr ""
+
+msgid "Max volumetric speed test"
+msgstr ""
+
+msgid "Start volumetric speed: "
+msgstr ""
+
+msgid "End volumetric speed: "
+msgstr ""
+
+msgid "step: "
+msgstr ""
+
+msgid ""
+"Please input valid values:\n"
+"start > 0 step >= 0\n"
+"end > start + step)"
+msgstr ""
+
+msgid "VFA test"
+msgstr ""
+
+msgid "Start speed: "
+msgstr ""
+
+msgid "End speed: "
+msgstr ""
+
+msgid ""
+"Please input valid values:\n"
+"start > 10 step >= 0\n"
+"end > start + step)"
+msgstr ""
+
 #: resources/data/hints.ini: [hint:3D Scene Operations]
 msgid ""
 "3D Scene Operations\n"
@@ -8166,6 +8606,16 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
+#~ msgstr "Válassz ki egy fájlt (gcode/.gco/.g/.ngc/ngc):"
+
+#~ msgid ""
+#~ "Too large layer height.\n"
+#~ "Reset to 0.2"
+#~ msgstr ""
+#~ "Túl nagy rétegmagasság.\n"
+#~ "Visszaállítva 0,2-re"
 
 #~ msgid ""
 #~ "\n"
@@ -8733,13 +9183,6 @@ msgstr ""
 #~ "Az objektum színei ennek eredményeképpen keveredni fognak."
 
 #~ msgid ""
-#~ "This setting specifies whether to add infill inside large hollows of tree "
-#~ "support"
-#~ msgstr ""
-#~ "Ez a beállítás határozza meg, hogy a fa támasz nagyobb üregeiben legyen-e "
-#~ "kitöltés."
-
-#~ msgid ""
 #~ "This setting stands for how much volume of filament can be melted and "
 #~ "extruded per second. Printing speed is limited by max volumetric speed, "
 #~ "in case of too high and unreasonable speed setting. Zero means no limit"
@@ -8756,9 +9199,6 @@ msgstr ""
 
 #~ msgid "Translation"
 #~ msgstr "Fordítás"
-
-#~ msgid "Tree support with infill"
-#~ msgstr "Fa támasz kitöltéssel"
 
 #~ msgid "Unable to create zip file"
 #~ msgstr "Nem sikerült létrehozni a zip fájlt"
